--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,6 +4,7 @@ trigger:
 pool:
   vmImage: 'ubuntu-18.04'
   demands:
+  - npm
 
 variables:
   buildConfiguration: 'Release'
@@ -64,3 +65,4 @@ steps:
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: drop'
   condition: succeeded()
+  
